# gijiroku-backend

./: .gitignore  Cargo.toml  README.md  diesel.toml
src/: main.rs
