[package]
name = "gijiroku-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "*"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars","tera"]